syntax = "proto3";

package restaurants.v1;

option go_package = "api/src/generated/restaurants/v1";

message RestaurantProto {
  string id = 1;
  string google_places_id = 2;
  string name = 3;
  string address = 4;
  int64 created_at = 6;
  int64 updated_at = 7;
}
