syntax = "proto3";

package reviews.v1;

option go_package = "api/src/generated/reviews/v1";

message ReviewProto {
  string id = 1;
  string google_places_id = 2;
  string user_id = 3;
  string restaurant_id = 4;
  string comment = 5;
  double rating = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}