syntax = "proto3";

package reviews.v1;

import "reviews/v1/review.proto";
import "restaurants/v1/restaurant.proto";

option go_package = "api/src/generated/reviews/v1";

service ReviewsService {
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);
  rpc GetReview(GetReviewRequest) returns (GetReviewResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (UpdateReviewResponse);
  rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse);
  rpc ListReviews(ListReviewsRequest) returns (ListReviewsResponse);
}

message CreateReviewRequest {
  string google_places_id = 1;
  string restaurant_name = 2;
  string restaurant_address = 3;
  string comment = 4;
  double rating = 5;
  repeated string tags = 6;
}

message CreateReviewResponse {
  ReviewProto review = 1;
  restaurants.v1.RestaurantProto restaurant = 2;
}

message GetReviewRequest {
  string id = 1;
}

message GetReviewResponse {
  ReviewProto review = 1;
}

message UpdateReviewRequest {
  string id = 1;
  string comment = 2;
  double rating = 3;
  repeated string tags = 4;
}

message UpdateReviewResponse {
  ReviewProto review = 1;
}

message DeleteReviewRequest {
  string id = 1;
}

message DeleteReviewResponse {
  bool success = 1;
}

message ListReviewsRequest {
  string google_places_id = 1;
}

message ListReviewsResponse {
  repeated ReviewProto reviews = 1;
}
